# NEMBA

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
embedders_backbones/: __init__.py  _bilstm.py  _embtcn.py  _transformers.py  analysis.py  backbones.py  compare.py  core.py  data.py  gui.py  viz.py
examples/: example_synthetic.py
