[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedders_backbones"
version = "0.1.0"
description = "Standalone self-supervised sequence encoders (Transformer-AE+DEC, TST, Bi-LSTM, Spatiotemporal, Graph-Attn, ...) for any population time series, with embedding visualisation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "scikit-learn", "matplotlib", "pandas", "pillow", "torch>=2.0"]

[project.optional-dependencies]
full = ["umap-learn", "ripser", "persim"]

[project.scripts]
embedders-backbones = "main:main"

[tool.setuptools.packages.find]
include = ["embedders_backbones*"]
